added white background div

--- a/index.html
+++ b/index.html
@@ -39,14 +39,11 @@
                     I’VE ALSO DONE MY BEST TO DEVELOP THE RIGHT SKILLS WHILE WORKING WITH OTHER 
                     TALENTED PEOPLE FROM ALL OVER THE WORLD.   
                 </p>
+        </div >
 
-              <!-- აქ იწყება შავი ბექგრაუნდის დივი -->
-           </div >
-
-
-           <div class="black-div">
-            <img class="image1" src="img/image1.jpg" alt="image1">
-            <img class="image2" src="img/image2.jpg" alt="image2">
+      <!-- black background div -->
+        <div class="black-div" >
+           <div class="black-div2">
                <h5 class="black-h5">EXPERIENCE</h5>
                 <!-- დიზაინერი -->
                <div class="designer">
@@ -74,6 +71,39 @@
                      PROCESS BEHIND THEM IS JUST CRAZY AND SUPER HECTIC, BUT I TRULY ENJOY IT</p>>
                </div>
            </div>
+       </div>
+     
+
+       <!-- white background div -->
+       <div class="white-div">
+           <img class="image8" src="img/image8.jpg" alt="image8">
+            <div class="whitediv-text">
+                <h3 class="networks">Social Networks Following</h3>
+                <p class="little-p">10/13</p>
+                <div class="black-divider"></div>
+
+                <div class="instagram">
+                    <p>Instagram</p>
+                    <p>1 233 679</p>
+                </div>
+                <div class="followers1">
+                    <p class="little-p">10/13</p>
+                    <p >FOLLOWERS</p>
+                </div>
+
+                <div class="youtube">
+                    <p>Youtube</p>
+                    <p>678 990</p>                 
+                </div>
+
+                <div class="followers1">
+                    <p>10/13</p>
+                    <p>FOLLOWERS</p>
+                </div>
+
+                <div class="black-divider2"></div>
+            
+            </div>
        </div>
    </section>
 
