--- a/index.html
+++ b/index.html
@@ -128,11 +128,25 @@
    </section>
 
 
-
+<!-- second black div section -->
 
    <section>
        <div class="blackdiv-2">
+           <div class="check">
+           <p>CHECK OUT </p>
+            <p> MORE </p>
+            <p>INFO</p>
+            </div>
 
+            <div class="footer">
+                <h3 class="footer-h3"> F&Q</h3>
+                <h3 class="footer-h3" >CONTACTS </h3>
+                <h3 class="footer-h3" >PRIVACY POLICY</h3>
+                <h3 class="footer-h3" >SARAH’S CLUB</h3>
+                <p class="footer-p">THIS WEBSITE IS MY PERSONAL SPACE WHERE I'M EXPRESSING MY CREATIVITY THROUGH DESIGN, PHOTOGRAPHY AND ART. 
+                 MAKE SURE TO VISIT MY SITE AGAIN.
+                </p>
+            </div>
        </div>
    </section>
     
