--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
 
       <!-- black background div -->
         <div class="black-div" >
+            <img  class="image1" src="img/Image1.jpg" alt="image1">
+            <img class="image2" src="img/Image2.jpg" alt="image2">
+            <img class="image3" src="img/Image3.jpg" alt="image3">
+            <img class="image4" src="img/Image4.jpg" alt="image4">
+            <img class="image5" src="img/Image5.jpg" alt="image5">
+            <img class="image6" src="img/Image6.jpg" alt="image6">
+            <img class="image7" src="img/Image7.jpg" alt="image7">
+            <img class="path" src="img/Path.png" alt="path">
            <div class="black-div2">
                <h5 class="black-h5">EXPERIENCE</h5>
                 <!-- დიზაინერი -->
@@ -132,17 +140,21 @@
 
    <section>
        <div class="blackdiv-2">
+           <img class="image9" src="img/image9.jpg" alt="image9">
+           <img class="image10" src="img/image10.jpg" alt="image10">
            <div class="check">
-           <p>CHECK OUT </p>
-            <p> MORE </p>
-            <p>INFO</p>
+           <p class="checkp" >CHECK OUT </p>
+            <p class="checkp" > MORE </p>
+            <p class="checkp" >INFO</p>
             </div>
 
             <div class="footer">
+                <div class="footer-class">
                 <h3 class="footer-h3"> F&Q</h3>
                 <h3 class="footer-h3" >CONTACTS </h3>
                 <h3 class="footer-h3" >PRIVACY POLICY</h3>
                 <h3 class="footer-h3" >SARAH’S CLUB</h3>
+                </div>
                 <p class="footer-p">THIS WEBSITE IS MY PERSONAL SPACE WHERE I'M EXPRESSING MY CREATIVITY THROUGH DESIGN, PHOTOGRAPHY AND ART. 
                  MAKE SURE TO VISIT MY SITE AGAIN.
                 </p>
