--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/8067d5e15a.js" crossorigin="anonymous"></script>  
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -11,17 +12,34 @@
 <body>
     <!-- უნდა დავასრულო ნავიგაცია, გავაკეთო წარწერები, ასევე უნდა დავამატო ბურგერ 
     აიქონი -->
-   <header>
-       <div class="bg-div">
+<header>
+    <div class="bg-div">
             <nav>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul class="nav-ul">
+                    <li class="ul-li">SHOP NOW</li>
+                    <li class="ul-li" >SARAH CORNISH</li>
+                    <li class="ul-li" ><i class="fas fa-bars"></i></li>
                 </ul>
             </nav>
+        <div class="aboutsarah">
+            <h1>About</h1>
+            <h1>Sarah Cornish</h1>
+        </div>    
+       <div class="somedetails">
+           <h2>SOME DETAILS</h2>
+           <H2>ABOUT ME</H2>
        </div>
-   </header>
+
+       <div class="arrowdiv">
+           <h4>CHECK</h4>
+           <h4>NEW</h4>
+           <h4>LOOK BOOKS</h4>
+           <img class="arrow" src="img/Arrow.png" alt="arrow">
+       </div>
+       <img class="ellipse" src="img/Ellipse.png" alt="ellipse">
+       <img class="bgpath" src="img/Path.png" alt="path">
+    </div>
+</header>
 <!-- აქ იწყება about us ის სექცია -->
    <section class="section1">
        <div class="section1-div">
@@ -145,7 +163,7 @@
            <div class="check">
            <p class="checkp" >CHECK OUT </p>
             <p class="checkp" > MORE </p>
-            <p class="checkp" >INFO</p>
+            <p class="checkp" > INFO</p>
             </div>
 
             <div class="footer">
