--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     I’VE ALSO DONE MY BEST TO DEVELOP THE RIGHT SKILLS WHILE WORKING WITH OTHER 
                     TALENTED PEOPLE FROM ALL OVER THE WORLD.   
                 </p>
+            </div>
         </div >
 
       <!-- black background div -->
@@ -99,9 +100,10 @@
                </div>
            </div>
        </div>
-     
+     </section>
 
        <!-- white background div -->
+       <section>
        <div class="white-div">
            <img class="image8" src="img/image8.jpg" alt="image8">
             <div class="whitediv-text">
