--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <div class="bg-div">
             <nav>
                 <ul class="nav-ul">
-                    <li class="ul-li">SHOP NOW</li>
-                    <li class="ul-li" >SARAH CORNISH</li>
+                    <li class="ul-li">  <a  class="li-a" href="shop.html"> SHOP NOW</a></li>
+                    <li class="ul-li">  <a class="li-a" href="index.html"> SARAH CORNISH </a></li>
+                    <li class="ul-li">  <a class="li-a" href="">CONTACT</a> </li>
                     <li class="ul-li" ><i class="fas fa-bars"></i></li>
                 </ul>
             </nav>
