--- a/shop.html
+++ b/shop.html
@@ -59,13 +59,13 @@
 
      <div class="shopblazer">
          <div class="glass">
-            <img class="image11" src="img/image11.jpg" alt="image11">
+            <img class="image11" src="img/Image11.jpg" alt="image11">
             <div class="glass-text">
                 <div>
                 <h5 class="shopblazer-h5"> Tela Votive </h5>
                 <p> Elegant glass candle holder </p>
                 </div>
-                <img class="text-plus" src="img/plus2.png" alt="plus2">
+                <img class="text-plus" src="img/Plus2.png" alt="plus2">
             </div>
          </div>
 
@@ -77,7 +77,7 @@
                 <h5 class="shopblazer-h5"> Loose-fitting blazer coat  </h5>
                 <p> Long sleeves & rounded hem </p>
                 </div>
-                <img class="text-plus" src="img/plus2.png" alt="plus2">
+                <img class="text-plus" src="img/Plus2.png" alt="plus2">
             </div>
          </div>
 
@@ -86,24 +86,24 @@
 
      <div class="bra-earring">
         <div class="earring">
-            <img class="image1-earring" src="img/image1.jpg" alt="image1-earring">
+            <img class="image1-earring" src="img/Image1.jpg" alt="image1-earring">
             <div class="earring-text">
                 <div>
                    <h5 class="bra-earring-h5">Golden Hoop Earrings</h5>
                    <p>One size fits all </p>
                 </div>
-            <img class="text-plus" src="img/plus2.png" alt="plus2"> 
+            <img class="text-plus" src="img/Plus2.png" alt="plus2"> 
             </div>          
         </div>
 
         <div class="bra">
-            <img class="image13" src="img/image13.jpg" alt="image13">
+            <img class="image13" src="img/Image13.jpg" alt="image13">
             <div class="bra-text">
                 <div>
             <h5 class="bra-earring-h5">Lightly Lined Bra</h5>
             <p>Soft & wireless </p>
                 </div>
-            <img class="text-plus" src="img/plus2.png" alt="plus2">    
+            <img class="text-plus" src="img/Plus2.png" alt="plus2">    
             </div>       
         </div>
 
@@ -115,24 +115,24 @@
 
       <div class="bra-earring">
         <div class="earring">
-            <img class="image1-earring" src="img/image14.jpg" alt="image1-earring">
+            <img class="image1-earring" src="img/Image14.jpg" alt="image1-earring">
             <div class="earring-text">
                 <div>
                    <h5 class="bra-earring-h5">GSheer Linen Curtain</h5>
                    <p>Plain & Soft </p>
                 </div>
-            <img class="text-plus" src="img/plus2.png" alt="plus2"> 
+            <img class="text-plus" src="img/Plus2.png" alt="plus2"> 
             </div>          
         </div>
 
         <div class="bra">
-            <img class="image15" src="img/image15.jpg" alt="image15">
+            <img class="image15" src="img/Image15.jpg" alt="image15">
             <div class="bra-text">
                 <div>
             <h5 class="bra-earring-h5">Slim Wool Trousers</h5>
             <p>Slim fit</p>
                 </div>
-            <img class="text-plus" src="img/plus2.png" alt="plus2">    
+            <img class="text-plus" src="img/Plus2.png" alt="plus2">    
             </div>       
         </div>
 
@@ -156,8 +156,8 @@
 
   <section>
     <div class="blackdiv-2">
-        <img class="image9" src="img/image9.jpg" alt="image9">
-        <img class="image10" src="img/image10.jpg" alt="image10">
+        <img class="image9" src="img/Image9.jpg" alt="image9">
+        <img class="image10" src="img/Image10.jpg" alt="image10">
         <div class="check">
         <p class="checkp" >CHECK OUT </p>
          <p class="checkp" > MORE </p>
