--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 
    <section>
        <div class="blackdiv-2">
-           <img class="image9" src="img/image9.jpg" alt="image9">
-           <img class="image10" src="img/image10.jpg" alt="image10">
+           <img class="image9" src="img/Image9.jpg" alt="image9">
+           <img class="image10" src="img/Image10.jpg" alt="image10">
            <div class="check">
            <p class="checkp" >CHECK OUT </p>
             <p class="checkp" > MORE </p>
