--- a/shop.html
+++ b/shop.html
@@ -71,7 +71,7 @@
 
 
          <div class="blazer">
-            <img class="image12" src="img/image12.jpg" alt="image11">
+            <img class="image12" src="img/Image12.jpg" alt="image11">
             <div class="blazer-text">
                 <div>
                 <h5 class="shopblazer-h5"> Loose-fitting blazer coat  </h5>
