--- a/shop.html
+++ b/shop.html
@@ -50,7 +50,7 @@
          <div class="shopby">
              <h3>SHOP BY</h3>
              <H3>COLLECTIONS</H3>
-             <img class="plus" src="img/Plus2.png" alt="plus">
+             <img class="plus" src="img/plus2.png" alt="plus">
          </div>
          <div class="findhere">
              <p>YOU ARE HERE TO FIND WHAT YOU NEED</p>
@@ -65,7 +65,7 @@
                 <h5 class="shopblazer-h5"> Tela Votive </h5>
                 <p> Elegant glass candle holder </p>
                 </div>
-                <img class="text-plus" src="img/Plus2.png" alt="plus2">
+                <img class="text-plus" src="img/plus2.png" alt="plus2">
             </div>
          </div>
 
@@ -77,7 +77,7 @@
                 <h5 class="shopblazer-h5"> Loose-fitting blazer coat  </h5>
                 <p> Long sleeves & rounded hem </p>
                 </div>
-                <img class="text-plus" src="img/Plus2.png" alt="plus2">
+                <img class="text-plus" src="img/plus2.png" alt="plus2">
             </div>
          </div>
 
@@ -92,7 +92,7 @@
                    <h5 class="bra-earring-h5">Golden Hoop Earrings</h5>
                    <p>One size fits all </p>
                 </div>
-            <img class="text-plus" src="img/Plus2.png" alt="plus2"> 
+            <img class="text-plus" src="img/plus2.png" alt="plus2"> 
             </div>          
         </div>
 
@@ -103,7 +103,7 @@
             <h5 class="bra-earring-h5">Lightly Lined Bra</h5>
             <p>Soft & wireless </p>
                 </div>
-            <img class="text-plus" src="img/Plus2.png" alt="plus2">    
+            <img class="text-plus" src="img/plus2.png" alt="plus2">    
             </div>       
         </div>
 
@@ -115,13 +115,13 @@
 
       <div class="bra-earring">
         <div class="earring">
-            <img class="image1-earring" src="img/Image14.jpg" alt="image1-earring">
+            <img class="image1-earring" src="img/image14.jpg" alt="image1-earring">
             <div class="earring-text">
                 <div>
                    <h5 class="bra-earring-h5">GSheer Linen Curtain</h5>
                    <p>Plain & Soft </p>
                 </div>
-            <img class="text-plus" src="img/Plus2.png" alt="plus2"> 
+            <img class="text-plus" src="img/plus2.png" alt="plus2"> 
             </div>          
         </div>
 
@@ -132,7 +132,7 @@
             <h5 class="bra-earring-h5">Slim Wool Trousers</h5>
             <p>Slim fit</p>
                 </div>
-            <img class="text-plus" src="img/Plus2.png" alt="plus2">    
+            <img class="text-plus" src="img/plus2.png" alt="plus2">    
             </div>       
         </div>
 
