--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="nav-ul">
                     <li class="ul-li">  <a  class="li-a" href="shop.html"> SHOP NOW</a></li>
                     <li class="ul-li">  <a class="li-a" href="index.html"> SARAH CORNISH </a></li>
-                    <li class="ul-li">  <a class="li-a" href="">CONTACT</a> </li>
+                    <li class="ul-li">  <a class="li-a" href="contact.html">CONTACT</a> </li>
                     <li class="ul-li" ><i class="fas fa-bars"></i></li>
                 </ul>
             </nav>
