--- a/shop.html
+++ b/shop.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8067d5e15a.js" crossorigin="anonymous"></script>  
     <title>Document</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    
 </head>
 <body>
     <header>
             <div class="header-bg2">
                 <nav>
                     <ul class="nav-ul">
-                        <li class="ul-li">SHOP NOW</li>
-                        <li class="ul-li" >SARAH CORNISH</li>
+                        <li class="ul-li">  <a  class="li-a" href="shop.html"> SHOP NOW</a></li>
+                        <li class="ul-li">  <a class="li-a" href="index.html"> SARAH CORNISH </a></li>
+                        <li class="ul-li">  <a class="li-a" href="contact.html">CONTACT</a> </li>
                         <li class="ul-li" ><i class="fas fa-bars"></i></li>
                     </ul>
                 </nav>
