--- a/contact.htm
+++ b/contact.htm
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="fashion blog">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="keetiaa">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/responsive.css">
     
 </head>
 <body class="contact-body"> 
@@ -24,7 +28,7 @@
         </form>
 
         <div class="send-button"> 
-            <div class="aaa">
+            <div class="send-div">
             <h4 class="send">SEND</h4>
             </div>
         </div>
