--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="fashion blog">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="keetiaa">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8067d5e15a.js" crossorigin="anonymous"></script>  
@@ -9,10 +12,9 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <!-- უნდა დავასრულო ნავიგაცია, გავაკეთო წარწერები, ასევე უნდა დავამატო ბურგერ 
-    აიქონი -->
 <header>
     <div class="bg-div">
             <nav>
@@ -135,7 +137,7 @@
             
                 <div class="enquire">
                     <p class="enquire-p">ENQUIRE</p>
-                    <p>ABOUT MY SOCIAL MEDIA BASE </p> 
+                    <p class="enquire-p">ABOUT MY SOCIAL MEDIA BASE </p> 
                     <div class="divider3"></div>
                     <div class="divider4"></div>
                 </div>
