--- a/shop.html
+++ b/shop.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="fashion blog">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="keetiaa">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8067d5e15a.js" crossorigin="anonymous"></script>  
@@ -9,6 +12,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/responsive.css">
     
 </head>
 <body>
