--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,35 @@
     <link rel="stylesheet" href="css/responsive.css">
     
 </head>
+<header>
+    <div class="contact-bg-div">
+        <nav>
+            <ul class="nav-ul">
+                <li class="ul-li">  <a  class="li-a-c" href="shop.html"> SHOP NOW</a></li>
+                <li class="ul-li">  <a class="li-a-c" href="index.html"> SARAH CORNISH </a></li>
+                <li class="ul-li">  <a class="li-a-c" href="contact.html">CONTACT</a> </li>
+            </ul>
+        </nav>
+
+        <!-- axali burger icon -->
+        <div class="container">
+            <nav class="header__nav nav-bar">
+                <div class="toggle-menu">
+                    <div class="line line1 "></div>
+                    <div class="line line2 "></div>
+                    <div class="line line3 "></div>
+                </div>
+                <ul class="nav-list">
+                    <li class="nav-list-item"><a href="" class="nav-link">SARAH CORNISH</a></li>
+                    <li class="nav-list-item"><a href="" class="nav-link">SHOP NOW</a></li>
+                    <li class="nav-list-item"><a href="" class="nav-link">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>  
+    </div>
+</header>
 <body class="contact-body"> 
-    <img  class="image16" src="img/image16.jpg" alt="image16">
+    <!-- <img  class="image16" src="img/image16.jpg" alt="image16"> -->
     <img  class="image17" src="img/image17.jpg" alt="image17">
     <img  class="image18" src="img/image18.jpg" alt="image18">
     <div class="forms-div">
