--- a/shop.html
+++ b/shop.html
@@ -26,6 +26,22 @@
                         <li class="ul-li" ><i class="fas fa-bars"></i></li>
                     </ul>
                 </nav>
+              <!-- axali burger icon -->
+                <div class="container">
+                    <nav class="header__nav nav-bar">
+                        <div class="toggle-menu">
+                            <div class="line line1"></div>
+                            <div class="line line2"></div>
+                            <div class="line line3"></div>
+                        </div>
+                        <ul class="nav-list">
+                            <li class="nav-list-item"><a href="" class="nav-link">SARAH CORNISH</a></li>
+                            <li class="nav-list-item"><a href="" class="nav-link">SHOP</a></li>
+                            <li class="nav-list-item"><a href="" class="nav-link">CONTACT</a></li>
+                        </ul>
+                    </nav>
+                </div>  
+                <script src="js/script.js"></script>
 
                 <div class="somedetails">
                     <h2>EXPLORE</h2>
@@ -183,6 +199,6 @@
          </div>
     </div>
 </section>
-
+           
 </body>
 </html>
