--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
             </nav>
         </div>  
     </div>
+    <script src="js/script.js"></script>
 </header>
 <body class="contact-body"> 
     <!-- <img  class="image16" src="img/image16.jpg" alt="image16"> -->
