--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
                     <div class="line line3 "></div>
                 </div>
                 <ul class="nav-list">
-                    <li class="nav-list-item"><a href="" class="nav-link">SARAH CORNISH</a></li>
-                    <li class="nav-list-item"><a href="" class="nav-link">SHOP NOW</a></li>
-                    <li class="nav-list-item"><a href="" class="nav-link">CONTACT</a></li>
+                    <li class="nav-list-item"><a href="index.html" class="nav-link">SARAH CORNISH</a></li>
+                    <li class="nav-list-item"><a href="shop.html" class="nav-link">SHOP NOW</a></li>
+                    <li class="nav-list-item"><a href="contact.html" class="nav-link">CONTACT</a></li>
                 </ul>
             </nav>
         </div>  
